syntax = "proto3";

package comics;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "/pb/comics";
option py_generic_services = true;

// Comics collection message
message Comics {
  repeated Comic comics = 1;
}

// Comic message definition
// Represents a comic book with all its metadata and user interaction information
message Comic {
  // Primary identifiers
  int32 id = 1 [(validate.rules).int32 = {gt: 0}];  // Must be positive
  repeated string titles = 2 [(validate.rules).repeated = {
    min_items: 1,
    items: {string: {min_len: 1}}
  }];  // At least one title required
  
  // Basic information
  string author = 3;
  string description = 4;
  ComicType type = 5;
  Status status = 6;
  
  // Content metadata
  string cover = 7 [(validate.rules).string.uri = true];  // Must be a valid URI
  int32 current_chap = 8 [(validate.rules).int32 = {gte: 0}];  // Cannot be negative
  google.protobuf.Timestamp last_update = 9;  // Using standard timestamp
  
  // Classifications
  repeated Publisher publishers = 10;
  repeated Genre genres = 11;
  Rating rating = 12;
  
  // User interaction fields
  bool track = 13;
  int32 viewed_chap = 14 [(validate.rules).int32 = {gte: 0}];  // Cannot be negative
  bool deleted = 15;

  // Reserved fields for future use
  reserved 16 to 20;
  reserved "views";
}

// Comic types enum
// Represents different types of comics available in the system
enum ComicType {
  option allow_alias = true;

  TYPE_UNKNOWN = 0;
  MANGA = 1;
  MANHUA = 2;
  MANHWA = 3;
  WEBTOON = 3;  // Alias for MANHWA
  NOVEL = 4;
}

// Comic status enum
// Represents the current publication status of a comic
enum Status {
  STATUS_UNKNOWN = 0;
  COMPLETED = 1;
  ON_AIR = 2;
  BREAK = 3;
  DROPPED = 4;
}

// Comic genres enum
// Represents different genres that can be assigned to a comic
enum Genre {
  option allow_alias = true;

  GENRE_UNKNOWN = 0;
  ACTION = 1;
  ADVENTURE = 2;
  FANTASY = 3;
  OVERPOWERED = 4;
  COMEDY = 5;
  DRAMA = 6;
  SCHOOL_LIFE = 7;
  SYSTEM = 8;
  SUPERNATURAL = 9;
  MARTIAL_ARTS = 10;
  ROMANCE = 11;
  SHOUNEN = 12;
  REINCARNATION = 13;
  
  // Common aliases
  OP = 4;           // Alias for OVERPOWERED
  CULTIVATION = 10; // Alias for MARTIAL_ARTS
}

// Publishers enum
// Represents different comic publishers/scan groups
enum Publisher {
  PUBLISHER_UNKNOWN = 0;
  ASURA = 1;
  REAPER_SCANS = 2;
  MANHUA_PLUS = 3;
  FLAME_SCANS = 4;
  LUMINOUS_SCANS = 5;
  RESET_SCANS = 6;
  ISEKAI_SCAN = 7;
  REALM_SCANS = 8;
  LEVIATAN_SCANS = 9;
  NIGHT_SCANS = 10;
  VOID_SCANS = 11;
  DRAKE_SCANS = 12;
  NOVEL_MIC = 13;
}

// Rating enum
// Represents user ratings for comics
enum Rating {
  option allow_alias = true;

  RATING_UNKNOWN = 0;
  F_RATED = 1;
  E_RATED = 2;
  D_RATED = 3;
  C_RATED = 4;
  B_RATED = 5;
  A_RATED = 6;
  S_RATED = 7;
  SS_RATED = 8;
  SSS_RATED = 9;

  // Common aliases
  F = 1;  // Alias for F_RATED
  ONE_STAR = 1;  // Alias for F_RATED
  E = 2;  // Alias for E_RATED
  D = 3;  // Alias for D_RATED
  TWO_STARS = 3;  // Alias for D_RATED
  C = 4;  // Alias for C_RATED
  B = 5;  // Alias for B_RATED
  THREE_STARS = 5;  // Alias for B_RATED
  A = 6;  // Alias for A_RATED
  S = 7;  // Alias for S_RATED
  FOUR_STARS = 7;  // Alias for S_RATED
  SS = 8; // Alias for SS_RATED
  SSS = 9; // Alias for SSS_RATED
  FIVE_STARS = 9; // Alias for SSS_RATED
}
